<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpriserName"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/eNameText"
            android:layout_width="240dip"
            android:layout_marginLeft="22dip"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/dongfangfeiyang"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginTop="9dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpriserRegNo"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/eRegNoText"
            android:layout_width="240dip"
            android:layout_marginLeft="38dip"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginTop="9dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpriserPerson"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/ePersonNameText"
            android:layout_width="170dip"
            android:layout_marginLeft="14dip"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/BtnRowMargin" >

        <Button
            android:id="@+id/queryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dip"
            android:background="@drawable/button"
            android:text="@string/query" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dip"
            android:background="@drawable/button"
            android:text="@string/rest" />
    </LinearLayout>

    <WebView
        android:id="@+id/webview01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip" />

</LinearLayout>